--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "build": "echo \"No build necessary\""
   },
   "dependencies": {
     "cors": "^2.8.5",
