--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -16,6 +16,10 @@
 # next.js
 /.next/
 /out/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # production
 /build
@@ -39,3 +43,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# clerk configuration (can include secrets)
+/.clerk/
