--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
     "react": "^19.0.0",
