Backend_Design&FrontEnd_Retail_Metadata_API_Intg._as_on_15.02.2025_by_MK

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,12 @@
   "author": "Host",
   "type": "module",
   "main": "server.js",
+  "imports": {
+  "#utils/*": "./utils/*",
+  "#config/*": "./config/*",
+  "#controllers/*": "./controllers/*",
+  "#routes/*": "./routes/*"
+},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
