--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,11 @@
   "type": "module",
   "main": "server.js",
   "imports": {
-  "#utils/*": "./utils/*",
-  "#config/*": "./config/*",
-  "#controllers/*": "./controllers/*",
-  "#routes/*": "./routes/*"
-},
+    "#utils/*": "./utils/*",
+    "#config/*": "./config/*",
+    "#controllers/*": "./controllers/*",
+    "#routes/*": "./routes/*"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
@@ -22,7 +22,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "mysql2": "^3.12.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   }
 }
