Filter_Backend_Bug_Fix_as_on_24.02.2025_by_MK

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,7 +44,7 @@
     },
     {
       "label": "Run Everything",
-      "dependsOn": ["Detect Remote & Git Pull", "Start Frontend & Backend"],
+      "dependsOn": ["Start Frontend & Backend"],
       "problemMatcher": [],
       "group": "build",
       "dependsOrder": "sequence"
