--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,11 @@
     "#routes/*": "./routes/*"
   },
   "nodemonConfig": {
-    "ignore": ["*.json", "*.csv","*.pyc"],
+    "ignore": [
+      "*.json",
+      "*.csv",
+      "*.pyc"
+    ],
     "events": {
       "restart": "cls"
     }
