--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,23 +1,23 @@
 {
   "version": "2.0.0",
   "tasks": [
-    // {
-    //   "label": "Detect Remote & Git Pull",
-    //   "type": "shell",
-    //   "command": "git pull $(git remote | ForEach-Object {$_}) main",
-    //   "problemMatcher": [],
-    //   "options": {
-    //     "cwd": "${workspaceFolder}"
-    //   },
-    //   "presentation": {
-    //     "reveal": "always",
-    //     "close": true
-    //   }
-    // },
     {
-      "label": "Run Backend",
+      "label": "Detect Remote & Git Pull",
       "type": "shell",
-      "command": "git pull https://github.com/ManmohanKhandelwal/salesProject; npm i ;  npm run dev",
+      "command": "git pull https://github.com/ManmohanKhandelwal/salesProject",
+      "problemMatcher": [],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "presentation": {
+        "reveal": "always",
+        "close": true
+      }
+    },
+    {
+      "label": "Install Backend Dependencies",
+      "type": "shell",
+      "command": "echo Installing Backend Dependencies; npm i",
       "problemMatcher": [],
       "options": {
         "cwd": "${workspaceFolder}/backend"
@@ -29,9 +29,9 @@
       }
     },
     {
-      "label": "Run Frontend",
+      "label": "Install Frontend Dependencies",
       "type": "shell",
-      "command": "start chrome http://localhost:3000; npm i ;  npm run dev",
+      "command": "echo Installing Frontend Dependencies; npm i",
       "problemMatcher": [],
       "options": {
         "cwd": "${workspaceFolder}/frontend"
@@ -43,11 +43,49 @@
       }
     },
     {
+      "label": "Run Backend",
+      "type": "shell",
+      "command": "npm run dev",
+      "problemMatcher": [],
+      "options": {
+        "cwd": "${workspaceFolder}/backend"
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "shared",
+        "group": "backend"
+      },
+      "dependsOn": ["Install Backend Dependencies"]
+    },
+    {
+      "label": "Run Frontend",
+      "type": "shell",
+      "command": "start chrome http://localhost:3000; npm run dev",
+      "problemMatcher": [],
+      "options": {
+        "cwd": "${workspaceFolder}/frontend"
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "shared",
+        "group": "frontend"
+      },
+      "dependsOn": ["Install Frontend Dependencies"]
+    },
+    {
       "label": "Run Everything",
-      "dependsOn": ["Start Frontend & Backend"],
+      "dependsOn": [
+        "Detect Remote & Git Pull",
+        "Install Backend Dependencies",
+        "Install Frontend Dependencies",
+        "Start Frontend & Backend"
+      ],
       "problemMatcher": [],
       "group": "build",
-      "dependsOrder": "sequence"
+      "dependsOrder": "sequence",
+      "runOptions": {
+        "runOn": "folderOpen"
+      }
     },
     {
       "label": "Start Frontend & Backend",
@@ -57,9 +95,6 @@
       "presentation": {
         "reveal": "always",
         "panel": "shared"
-      },
-      "runOptions": {
-        "runOn": "folderOpen"
       }
     }
   ]
