Store_API_Fix_as_on_25.03.2025_by_MK

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "#utils/*": "./utils/*",
     "#config/*": "./config/*",
     "#controllers/*": "./controllers/*",
-    "#routes/*": "./routes/*"
+    "#routes/*": "./routes/*",
+    "#commands/*": "./commands/*"
   },
   "nodemonConfig": {
     "ignore": [
